# ironpal

./: .gitignore  REFS.md  TASK.md  exercise-recognition-skill.claude  weight-lifted-analysis-skill.claude
deployment/: deploy.sh
docs/: Challenges_and_Solutions_BodyMounted.md  MVP_Phase0_ExecutionPlan.md  MVP_Roadmap.md  a52-camera-setup-guide.md  ai-video-generation-execution-plan.md  ai-video-generation-options.md  body-mounted-image-prompts-updated.md  body-mounted-image-prompts.md  body-mounted-product-prompts.md  body-mounted-video-prompts.md  challenges-and-solutions.md  color-schemes.md  competitive-landscape.md  customer_ble_tracker.txt  fixing-post-publishing-issue-plan.md  founder-led-production-strategy.md  image-prompts.md  ironpal-capture-hardware-decision-log.md  ironpal-distribution-channel-plan.md  ironpal-distribution-channel-plan_grilled.md  ironpal-imu-poc-integration-plan.md  ironpal-landing-page-plan.md  ironpal-landing-page-plan_grilled.md  ironpal-personal-account-growth-and-amplification-playbook.md  ironpal-poc-v1-design.md  ironpal-poc-v1-design_grilled.md  ironpal-poc-v1.md  ironpal-poc-v1_grilled.md  (+31 more)
poc/backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
poc/backend/src/ironpal_poc/: auth.py  config.py  db.py  main.py  models.py  schemas.py  vision.py
poc/backend/src/ironpal_poc/api/: auth_routes.py  router.py  sessions_routes.py  templates_routes.py  vision_routes.py
poc/backend/src/ironpal_poc_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
poc/backend/tests/: conftest.py  test_api.py
(+133 files in other folders)
